Fixed: left align in mobile view

--- a/src/components/table/Table.css
+++ b/src/components/table/Table.css
@@ -13,7 +13,7 @@ table{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 20px;
+    padding-top: var(--containerPadding);
   }
 
 
@@ -49,6 +49,7 @@ tr:nth-of-type(2n){
         gap: 0.5rem;
         grid-template-columns: 15ch auto;
         padding: .5rem 1rem;
+        text-align: left;
     }
 
     td:first-child{
